# EULA

./: .gitignore  .vercelignore  README.md  docker-compose.yml  requirements-dev.txt  requirements.txt
api/: index.py
backend/: .env.example  Dockerfile  pyproject.toml
backend/api/: index.py
backend/src/eula/: __init__.py  config.py  main.py
backend/src/eula/api/: __init__.py  schemas.py
backend/src/eula/api/routes/: debug.py  health.py  mint.py  verification.py
backend/src/eula/domain/: __init__.py  hashing.py  models.py  validation.py
backend/src/eula/infrastructure/: __init__.py  database.py  storage.py
backend/src/eula/services/: __init__.py  did.py  forensic.py  xrpl.py
backend/src/eula/services/ocr/: __init__.py  engine.py  extractor.py  normalize.py  table.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  test_did_manual.ts  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: DIDManagement.css  DIDManagement.tsx  DropZone.css  DropZone.tsx  Marketplace.css  Marketplace.tsx  MintingPanel.css  MintingPanel.tsx  VerificationStatus.css  VerificationStatus.tsx  WalletConnect.css  WalletConnect.tsx
frontend/src/hooks/: useVerification.ts  useWallet.ts
frontend/src/services/: api.ts  crossmark.ts  xrpl.ts
frontend/src/types/: index.ts
tests/: __init__.py  test_ocr.py
tests/sample_docs/: README.md  generate_invoicenow_pdfs.py  generate_test_pdfs.py  po_invoicenow_valid.ocr_debug.json  po_invoicenow_valid.ocr_output.json
