[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eula"
version = "0.1.0"
description = "RWA Tokenization & Invoice Factoring Platform"
readme = "../README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "EULA Team" }
]

dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Database
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    
    # OCR Pipeline
    "python-doctr[torch]>=0.7.0",
    "pdf2image>=1.16.0",
    "Pillow>=10.2.0",
    
    # XRPL
    "xrpl-py>=2.5.0",
    
    # Utilities
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/eula"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
